[package]
name = "demo1"
version = "0.1.0"
authors = ["xueping.li <xueping.li@geely.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
grep = {path = "grep"}
pkg = {path = "pkg"}
guess = {path = "guess"}